[package]
name = "cfddns"
version = "0.1.0"
authors = ["Matt Oswalt <matt@oswalt.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cloudflare = "0.6"
clap = "2.33"
serde = "1.0"
serde_json = "1.0"
reqwest = "0.10"
